--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://abhinavpraveen06_db_user:WkbSQRXeJdkSVDPI@gym-tracker.5akroiu.mongodb.net/?appName=Gym-Tracker
+MONGODB_URI=mongodb+srv://abhinavpraveen06_db_user:WkbSQRXeJdkSVDPI@gym-tracker.5akroiu.mongodb.net/vehicle-health-monitor?appName=Gym-Tracker
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-NODE_ENV=development
+NODE_ENV=production
