--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://abhinavpraveen06_db_user:WkbSQRXeJdkSVDPI@gym-tracker.5akroiu.mongodb.net/vehicle-health-monitor?retryWrites=true&w=majority&appName=Gym-Tracker
+MONGODB_URI=mongodb+srv://Abhinav650:ZaWarudo@10669@gym-tracker.5akroiu.mongodb.net/vehicle-health-monitor?retryWrites=true&w=majority&appName=Gym-Tracker
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-vehicle-health-monitor-2024
 NODE_ENV=production
